istio/myservice-gateway-v2-70-20-10.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myservice-istio-svc-external
spec:
  hosts:
  - "*"
  gateways:
  - myservice-gateway
  http:
  - route:
    - destination:        
        host: myservice.myservice.svc.cluster.local
        subset: v1
      weight: 20
    - destination:
        host: myservice.myservice.svc.cluster.local
        subset: v2
      weight: 10
    - destination:
        host: myservice.legacy
        subset: 
      weight: 70
