istio/myservice-gateway-v3-50-30-20-fault-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myservice-istio-svc-external
spec:
  hosts:
  - "*"
  gateways:
  - myservice-gateway
  http: 
  - fault:
      # delay:
      #   percentage:
      #     value: 100
      #   fixedDelay: 5s  
      # abort:
      #   httpStatus: 500
      #   percentage:
      #     value: 50
    route:
    - destination:
        host: myservice.myservice.svc.cluster.local
        subset: v1
      weight: 50      
    - destination:
        host: myservice.myservice.svc.cluster.local
        subset: v2
      weight: 30     
    - destination:
        host: myservice.legacy
        subset: 
      weight: 20
    timeout: 2s
    retries:
      attempts: 3
      perTryTimeout: 2s
