istio/myservice-gateway-v4-0-70-30.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myservice-istio-svc-external
spec:
  hosts:
  - "*"
  gateways:
  - myservice-gateway
  http:
  - route:
    - destination:        
        host: myservice.myservice.svc.cluster.local
        subset: v1
      weight: 70
    - destination:
        host: myservice.myservice.svc.cluster.local
        subset: v2
      weight: 30
